# open-clodex-iflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HABIT_TRACKER.md  LICENSE  Makefile  README.md  SECURITY.md  TASKS.md  TODO.md  pyproject.toml  reviewer.md
.github/workflows/: ci.yml
docs/: AGENTS.md  AI_PROJECT_CHECKLIST.md  ARCHITECTURE_BASELINE.md  ARCH_SPEC.md  ATTEMPT_TIMEOUT_RETRY_CONTRACT.md  AUDIT_OVERLAYS.md  EXECUTION_PRINCIPLES.md  GENERATED_PACK_MANIFEST.json  GUIDE_TRACEABILITY_AUDIT.md  JTBD.md  OPENCODE_MODEL_BENCHMARK.md  OPERATOR_RUNBOOK.md  ORCHESTRATED.md  PARALLEL_FANOUT_CONTRACT.md  PRD.md  PROVIDER_COMPATIBILITY.md  QUALITY_GATES.md  READ_FIRST.md  REUSE_RESEARCH_AUDIT.md  SECURITY_THREAT_MODEL.md  SKILLS.md  START_HERE.md  WINDOWED_RUNTIME_CONTRACT.md
docs/releases/: v0.1.0.md
enforcement/: __init__.py  deps_rules.py  secret_scan.py  tdd_guard.json  tdd_guard.py
overlays/: release-risk-gate.md  repo-forensics-review.md  reviewer-packet.md  test-forensics-audit.md
scripts/: __init__.py  check_generated_pack.py  run_skeleton_tester.py  validate_overlays.py  validate_story.py
skeleton-tester/: README.md
src/open_clodex_iflow/: cli.py  contracts.py  lanes.py
tasks/epics/: epic-1-bootstrap-open-clodex-iflow.md
tasks/stories/: 1.1-repo-bootstrap.story.md  1.2-provider-discovery.story.md  1.3-artifact-packet-contract.story.md
tests/integration/: test_repo_scaffold.py
tests/unit/: test_audit_overlays.py  test_cli_commands.py  test_cli_smoke.py  test_discovery.py  test_enforcement_tools.py  (+7 more)
(+9 files in other folders)
